kube-state-metrics/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kube-state-metrics
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kube-state-metrics.local
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-state-metrics
          servicePort: 8080
